--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<name>SampleJPA</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>8</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -52,7 +52,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.miragesql</groupId>
-			<artifactId>miragesql</artifactId>
+			<artifactId>miragesql-integration</artifactId>
 			<version>2.1.2</version>
 		</dependency>
 	</dependencies>
