--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8888
 org.hibernate.dialect.ProgressDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
